@@ -51,48 +51,70 @@
 		<finalName>TallerDevOps</finalName>
 
 		<plugins>
-    <!-- JaCoCo code coverage plugin -->
-    <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.7.1.201405082137</version>
-        <configuration>
-            <propertyName>jacoco.agent.argLine</propertyName>
-            <append>true</append>
-            <formats>
-                <format>html</format>
-                <format>xml</format>
-            </formats>
-        </configuration>
-        <executions>
-            <execution>
-                <id>jacoco-surefire</id>
-                <goals>
-                    <goal>prepare-agent</goal>
-                </goals>
-                <configuration>
-                    <destFile>${sonar.jacoco.reportPath}</destFile>
-                </configuration>
-            </execution>
-            <execution>
-                <id>jacoco-failsafe</id>
-                <goals>
-                    <goal>prepare-agent-integration</goal>
-                </goals>
-                <configuration>
-                    <destFile>${sonar.jacoco.itReportPath}</destFile>
-                </configuration>
-            </execution>
-            <execution>
-                <id>report</id>
-                <phase>prepare-package</phase>
-                <goals>
-                    <goal>report</goal>
-                </goals>
-            </execution>
-        </executions>
+   <plugin>
+      <groupId>org.jacoco</groupId>
+      <artifactId>jacoco-maven-plugin</artifactId>
+      <version>0.7.5.201505241946</version>
+      <configuration>
+        <excludes>
+          <exclude>org/company/*</exclude>
+        </excludes>
+      </configuration>
+      <executions>
+        <execution>
+          <id>default-prepare-agent</id>
+          <phase>initialize</phase>
+          <goals>
+            <goal>prepare-agent</goal>
+          </goals>
+        </execution>
+        <execution>
+          <id>default-check</id>
+          <phase>verify</phase>
+          <goals>
+            <goal>check</goal>
+          </goals>
+          <configuration>
+            <rules>
+              <rule implementation="org.jacoco.maven.RuleConfiguration">
+                <element>BUNDLE</element>
+                <limits>
+                  <limit implementation="org.jacoco.report.check.Limit">
+                    <counter>INSTRUCTION</counter>
+                    <value>COVEREDRATIO</value>
+                    <minimum>0.0</minimum>
+                  </limit>
+                  <limit implementation="org.jacoco.report.check.Limit">
+                    <counter>BRANCH</counter>
+                    <value>COVEREDRATIO</value>
+                    <minimum>0.0</minimum>
+                  </limit>
+                  <limit implementation="org.jacoco.report.check.Limit">
+                    <counter>CLASS</counter>
+                    <value>MISSEDCOUNT</value>
+                    <maximum>1000</maximum>
+                  </limit>
+                </limits>
+              </rule>
+            </rules>
+          </configuration>
+        </execution>
+        <execution>
+          <id>default-report</id>
+          <phase>verify</phase>
+          <goals>
+            <goal>report</goal>
+          </goals>
+        </execution>
+      </executions>
     </plugin>
-    
+    <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-surefire-plugin</artifactId>
+         <configuration>
+           <argLine>${argLine} -XX:PermSize=256m -XX:MaxPermSize=1048m</argLine>
+         </configuration>
+      </plugin>
     <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>cobertura-maven-plugin</artifactId>
